<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phone_log_all">最近通话</string>
    <string name="phone_log_receive">Receive</string>
    <string name="phone_log_dial">Dial</string>
    <string name="phone_log_miss">未接来电</string>
    <string name="phone_window_close">Close this window</string>
    <string name="phone_new_customer">New Customer</string>
    <string name="phone_detail">Detail</string>
    <string name="custom_info_title">customer information</string>
    <string name="custom_info_edit_title">edit customer information</string>
    <string name="custom_btn_call">call</string>
    <string name="custom_btn_sms">sms</string>
    <string name="calm_btn_queue">New queue</string>
    <string name="calm_setting_title_close">关闭</string>
    <string name="calm_setting_phone_clear_callog_peroid_title">选择电话记录保存时间</string>
    <string name="calm_setting_phone_clear_callog_peroid_content">电话记录最多保存 %1$d 天</string>
    <string name="cashier_goods_total"><![CDATA[共<b><font color=#03a9f4>%s</b>项商品]]></string>
    <string name="calm_setting_title">电话设置</string>
    <string name="verify_permission_title">你还没有权限，请授权进行此操作</string>
    <string name="veryfy_permission_introduction">需要有权的人给予授权后，可执行操作</string>
    <string name="confrim_authorization">确认授权</string>
    <string name="check_rule">查看详情</string>
    <string name="recharging">充值:</string>
    <string name="give_customer">赠送:</string>
    <string name="recharge_rule">充赠规则</string>
    <string name="recharge_money">充值金额</string>
    <string name="given_money">赠送金额</string>
    <string name="given_rate">赠送比例</string>
    <string name="full_recharge_money">充值额度满</string>
    <string name="send_money">赠</string>
    <string name="full_money">满%s</string>
    <string name="send_given_money">赠送</string>
    <string name="send_given_rate_money">赠送比例</string>
    <string name="no_send">当前金额不满足赠送条件</string>
    <string name="send_not_open">当前没有满赠活动</string>
    <string name="order_center_fragment_dialog_title">原因</string>
    <string name="order_center_fragment_dialog_title_Invalid">作废原因</string>
    <string name="order_center_fragment_dialog_title_refuse">拒绝原因</string>
    <string name="order_center_fragment_dialog_title__anti_settlement">反结账原因</string>
    <string name="order_center_fragment_dialog_title_free">免单原因</string>
    <string name="order_center_fragment_dialog_title_part_free">单菜品赠送原因</string>
    <string name="order_center_fragment_dialog_title_return_dishes">退菜原因</string>
    <string name="order_center_fragment_dialog_title_return">退货原因</string>
    <string name="order_center_fragment_dialog_title_deny">预定拒绝原因</string>
    <string name="order_center_fragment_dialog_title_call_off">订单取消原因</string>
    <string name="order_center_fragment_dialog_title_charge_account">挂账原因</string>
    <string name="order_center_fragment_dialog_title_part_of_the_return">押金部分退还原因</string>
    <string name="order_center_fragment_dialog_title_discount">整单折扣原因</string>
    <string name="order_center_fragment_dialog_title_part_discount">单品让价原因</string>
    <string name="order_center_fragment_dialog_title_fete">宴请原因</string>
    <string name="order_center_fragment_dialog_title_payed">退款明细</string>
    <string name="order_center_fragment_dialog_title_print">通知后厨</string>
    <string name="dialog_other">其他</string>
    <string name="order_center_fragment_dialog_print_message">打印后厨单据通知厨房</string>
    <string name="order_center_fragment_dialog_pay_disallow_card">银联不允许退款!</string>
    <string name="order_center_fragment_dialog_pay_disallow_code">扫码不允许退款!</string>
    <string name="order_center_fragment_dialog_pay_total">"退款总金额"</string>
    <string name="reason_type_delete_dish_title">退货</string>
    <string name="reason_type_destroy_title">作废</string>
    <string name="reason_type_refuse_title">拒绝</string>
    <string name="reason_type_repay_title">反结账理由</string>
    <string name="reason_type_repay_btn">反结账</string>
    <string name="reason_type_self_define_reason">请输入自定义理由...</string>
    <string name="reason_not_illedgal">未选择理由</string>
    <string name="reason_free_title">免单理由</string>
    <string name="reason_type_free_btn">免单</string>
    <string name="create_document_text">创  建</string>
    <string name="title_by_take">收货人信息</string>
    <string name="title_by_self">取货人信息</string>
    <string name="record_document_text">录  单</string>
    <string name="record_from">来源</string>
    <string name="record_send_time">送达</string>
    <string name="record_send_print">不打印</string>
    <string name="record_pay">支付</string>
    <string name="record_payed">已支付</string>
    <string name="record_unpay">未支付</string>
    <string name="record_payed_cash">现金</string>
    <string name="record_payed_self">自键自定义支付</string>
    <string name="record_send_title">配送</string>
    <string name="record_send_already">已配送</string>
    <string name="record_send_not">未配送</string>
    <string name="record_beigin">开始点单</string>
    <string name="record_send_immediate">及时送达</string>
    <string name="keyboard_clear">清空</string>
    <string name="order_desk_number_hint">点击输入</string>
    <string name="order_number_hint">请输入号牌</string>
    <string name="takeout_pickup_person_info">取货人信息</string>
    <string name="backSpace">退格</string>
    <string name="quiet">退出</string>
    <string name="home">主页</string>
    <string name="back_home">返回主页</string>
    <string name="go_home">进入主页</string>
    <string name="equipment_self_checking">设备自检</string>
    <string name="customer_phone">客服电话</string>
    <string name="team_viewer">远程协助</string>
    <string name="questions">问题库</string>
    <string name="mealFee">餐盒费</string>
    <string name="people">人</string>
    <string name="order_people_count_st">人数:%d人</string>
    <string name="back_deposit_text">退押金</string>
    <string name="text_guest_cnt">人&#160;&#160;&#160;&#160;数：</string>
    <string name="deposit_back_invalid">该条码无法对应到有效订单</string>
    <string name="deposit_backed_msg">已退押金，共计 {HBF}%s</string>
    <string name="read_card_record">刷卡录入</string>
    <string name="sale_anonymous_card_txt">匿名卡售卡储值</string>
    <string name="sale_anonymous_card_remark">注：匿名卡退卡只支持现金退回</string>
    <string name="recharge_value_empty_tip">卡号录入成功后，才能进行充值哦！</string>
    <string name="lag_select_reason_label">请选择挂账理由</string>
    <string name="lag_do_label">您当前正在挂账，请谨慎操作</string>
    <string name="btn_lag">挂账</string>
    <string name="lag_reason_not_null">挂账理由不能为空，请选择或者输入</string>
    <string name="lag_split_can_not">拆单不支持挂账</string>
    <string name="lag_remaining_amount">剩余挂账额度：%1$s</string>
    <string name="lag_usage_amount">已挂账额度：%1$s</string>
    <string name="reason_lag_title">挂账理由</string>
    <string name="reason_trade_discount_title">折让理由</string>
    <string name="reason_member_integral_modify">会员积分修改理由</string>
    <string name="reason_item_give_title">赠送理由</string>
    <string name="reason_banquet_title">宴请理由</string>
    <string name="lag_result_text">挂账结果</string>
    <string name="lag_amount_over_hint">超过可挂账金额，不能挂账!</string>
    <string name="cards_status_invalid_txt">无效的卡状态！</string>
    <string name="card_format_invalid">无效的卡号格式!</string>
    <string name="card_reader_timeout_or_cancel">刷卡机连接超时或手动取消\n点击“再次尝试”可继续刷卡</string>
    <string name="anonymous_card_status_text">状态 &#160;&#160; </string>
    <string name="anonymouscard_store_info_text">储值 %1$s&#160;&#160; &#047; &#160;&#160;共计 %2$s</string>
    <string name="anonymouscard_sale_info_text">匿名卡工本费 %1$s&#160;&#160; &#047; &#160;&#160;储值 %2$s&#160;&#160; &#047; &#160;&#160;共计 %3$s</string>
    <string name="anonymouscard_only_sale_info_text">匿名卡工本费 %1$s&#160;&#160; &#047; &#160;&#160;共计 %2$s</string>
    <string name="anonymous_card_info">匿名卡信息</string>
    <string name="card_num">卡号 &#160;&#160; </string>
    <string name="store_diy_value">自定义金额</string>
    <string name="pay_success_info">收银成功!</string>
    <string name="pay_fail_info">收银失败!</string>
    <string name="customer_value">自定义充值</string>
    <string name="please_input_store_value">请输入充值金额</string>
    <string name="lag_amount_zero">应收金额为0不能挂账,请使用现金收银</string>
    <string name="anonymouscard_not_have_store_per">门店不具备储值权限</string>
    <string name="anonymouscard_not_have_sale_per">门店不具备售卡权限</string>
    <string name="order_detail">订单详情</string>
    <string name="operate_success">操作成功</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_validity_pre">有效期:</string>
    <string name="to">至</string>
    <string name="customer_exit_alert_title">是否切换账户?</string>
    <string name="cashier_name">众美云服</string>
    <string name="dish_row_nb">请输入号牌</string>
    <string name="dish_flapper">号牌</string>
    <string name="dish_card_number">号牌 : </string>
    <string name="dish_table_number">桌号</string>
    <string name="table_number">桌号 : </string>
    <string name="dish_number">号</string>
    <string name="takeout_human_info">收货人信息</string>
    <string name="no_invoice">不开发票</string>
    <string name="personal_invoice">个人发票</string>
    <string name="company_invoice">公司发票</string>
    <string name="takeout_as_fast">及时送达</string>
    <string name="order_dish">点菜</string>
    <string name="order_search">搜索点单</string>
    <string name="order_center">订单中心</string>
    <string name="order_center_back">返回订单中心</string>
    <string name="wait_for_process">待处理</string>
    <string name="sales_note">销货单</string>
    <string name="reset">重置</string>
    <string name="manag_delivery">送餐员管理</string>
    <string name="order_dish_back">返回点菜</string>
    <string name="hand_over">交接</string>
    <string name="order_value_title">订单总额</string>
    <string name="charging">储值</string>
    <string name="customer_info">会员信息</string>
    <string name="other_pay_method">其它付款方式</string>
    <string name="edit_order_search_text">搜索订单</string>
    <string name="order_un_dealwith_st">未处理</string>
    <string name="order_un_pay_st">未付款</string>
    <string name="order_pay_st">已付款</string>
    <string name="order_refund_st">退货</string>
    <string name="order_deposit_refund_st">退还押金</string>
    <string name="order_to_refund">重新退款</string>
    <string name="order_repeated">反结账</string>
    <string name="order_continue_repeated">继续\n反结账</string>
    <string name="order_pay_time">时间</string>
    <string name="order_come_frome">来源</string>
    <string name="order_money">金额</string>
    <string name="order_state">状态</string>
    <string name="order_detail_time_st">订单时间:"%s</string>
    <string name="third_serial_no_st">第三方流水号:%s</string>
    <string name="third_serial">第三方流水号%s</string>
    <string name="order_detail_source_kiosk">自助%1$s</string>
    <string name="order_number_st">订单号:%s</string>
    <string name="order_refund_time_st">退单时间:%s</string>
    <string name="order_send_time">要求:%s送达</string>
    <string name="order_send_delivery_time">%s送达</string>
    <string name="order_take_time">%s到店</string>
    <string name="order_here_time">%s就餐</string>
    <string name="order_delivery_address">地址:%s</string>
    <string name="order_card_number">号牌:%s</string>
    <string name="order_delivery_now">立即送达</string>
    <string name="electronic_scale_connected">电子秤已连接</string>
    <string name="please_input_reason_self">自定义输入原因</string>
    <string name="can_not_send">无法配送</string>
    <string name="out_of_range">超出范围</string>
    <string name="hot_business">生意火爆</string>
    <string name="sold_out">菜品售馨</string>
    <string name="refuse_reason">订单拒绝理由</string>
    <string name="autoset">自动配置</string>
    <string name="please_input_weight">请手动输入商品重量</string>
    <string name="item_name">商品名称</string>
    <string name="item_weight">商品重量</string>
    <string name="weight_price">金额</string>
    <string name="weight_operate">操作</string>
    <string name="item_weight_tips">点击菜单添加商品——称重\n继续添加第二个商品——称重\n……\n\n已称商品无需拿下秤，可继续添加新商品）</string>
    <string name="open_input_weight">开启手动输入重量</string>
    <string name="confirm">确认</string>
</resources>