<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadow_bg"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_weigh_background"
        android:orientation="vertical"
        tools:context="com.zhongmei.bty.snack.orderdish.WeighFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/weight_tips_str"
                android:textColor="#FF7901"
                android:textSize="21.33sp" />

            <ImageButton
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:src="@drawable/close_icon" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/electronic_scale_connected"
            android:textColor="#666666"
            android:textSize="13.33sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:layout_marginTop="10dp"
            android:background="#DFE4E9" />

        <TextView
            android:id="@+id/tv_electronic_scale_no_connect_hint"
            android:layout_width="match_parent"
            android:layout_height="25.33dp"
            android:background="#FFEEE4"
            android:gravity="center"
            android:text="@string/please_input_weight"
            android:textColor="@color/color_fe6a4d"
            android:textSize="13.33sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingLeft="14dp"
                android:text="@string/item_name"
                android:textColor="#999999"
                android:textSize="13.33sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:gravity="center"
                android:text="@string/item_weight"
                android:textColor="#999999"
                android:textSize="13.33sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:gravity="center"
                android:text="@string/weight_price"
                android:textColor="#999999"
                android:textSize="13.33sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight_operate"
                android:textColor="#999999"
                android:textSize="13.33sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="#DFE4E9" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/tv_add_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/item_weight_tips"
                android:textColor="#bcbcbc"
                android:textSize="13.33sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.67dp"
            android:background="#DFE4E9" />

        <TextView
            android:id="@+id/tv_manual_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/icon_turn_off"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/open_input_weight"
            android:textColor="#999999"
            android:textSize="13.33sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_weight_ok_disable"
            android:clickable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textColor="#999999"
            android:textSize="21.33sp" />
    </LinearLayout>


</LinearLayout>
