<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <LinearLayout
        android:id="@+id/lag_info_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lag_info_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="2"
                android:maxWidth="260dp"
                android:textColor="@color/settings_normalword"
                android:textSize="@dimen/text_24" />

            <TextView
                android:id="@+id/lag_info_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/lag_info_customer_name"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/lag_info_customer_name"
                android:gravity="left"
                android:textColor="@color/dinner_customer_gray"
                android:textSize="@dimen/text_18" />


            <TextView
                android:id="@+id/lag_remaining_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lag_info_customer_name"
                android:layout_below="@id/lag_info_customer_name"
                android:layout_marginTop="5dp"
                android:text="@string/lag_remaining_amount"
                android:textColor="@color/dinner_customer_gray"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/lag_usage_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lag_remaining_amount"
                android:layout_marginTop="5dp"
                android:text="@string/lag_usage_amount"
                android:textColor="@color/dinner_customer_gray"
                android:textSize="@dimen/text_18" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_quiet"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="right"
            android:background="@drawable/btn_dinner_exit_customer" />
    </LinearLayout>

    <View
        android:id="@+id/lag_info_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/lag_info_head"
        android:layout_marginTop="36dp"
        android:background="@drawable/dash_line"
        android:layerType="software" />

    <Button
        android:id="@+id/btn_reason_select"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_bottom_height"
        android:layout_below="@id/lag_info_line"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_select_selector"
        android:ellipsize="end"
        android:gravity="left|center_vertical"
        android:maxLength="30"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:text="@string/lag_select_reason_label"
        android:textColor="@color/print_line_gray"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lag_do_label"
            android:textColor="@color/print_line_gray"
            android:textSize="@dimen/text_14" />

        <Button
            android:id="@+id/btn_lag"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_booking_cancel"
            android:gravity="center"
            android:text="@string/btn_lag"
            android:textColor="@color/text_white"
            android:textSize="@dimen/pay_lagpay_buttom_size" />
    </LinearLayout>
</RelativeLayout>
